[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solax-ant-controller"
version = "0.3.0"
description = "SolaX battery-aware Braiins OS miner controller"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Matus Bursa" },
]
dependencies = [
  "requests>=2.31,<3",
]

[project.scripts]
solax-ant-controller = "solax_ant_controller.controller:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "build>=1.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
